src/test/deca/codegen/extension/invalid/created/CastBrother.deca
// Description:
//  remontée et redescente d'un cast vers un frère dans l'héritage
// Resultats:
//  Exception in thread "main" java.lang.ClassCastException: class B cannot be cast to class C (B and C are in unnamed module of loader 'app') 
// at CastBrother.main(Unknown Source)


class A{

}

class B extends A{

}

class C extends A{
    int a;
}

{
    B newB = new B();
    A newA = (A) (newB);
    C newC = (C) (newA);
    newC.a = 4;
    println("ERRONE");
}